# src/app/api/get_task/route.ts
@@ -1,22 +1,29 @@
 import { NextResponse, NextRequest } from "next/server";
-import { DEFAULT_MODEL } from "@/lib/SunoApi";
-import { aceDataSunoApi } from "@/lib/AceDataSunoApi";
 import { corsHeaders } from "@/lib/utils";
+import { aceDataSunoApi } from "@/lib/AceDataSunoApi";
 
 export const maxDuration = 300;
 export const dynamic = "force-dynamic";
 
-export async function POST(req: NextRequest) {
-  if (req.method === 'POST') {
+export async function GET(req: NextRequest) {
+  if (req.method === 'GET') {
     try {
-      const body = await req.json();
-      const { prompt, tags, title, make_instrumental, model } = body;
-      const audioInfo = await aceDataSunoApi.custom_generate(
-        prompt, tags, title,
-        Boolean(make_instrumental),
-        model || DEFAULT_MODEL
-      );
-      return new NextResponse(JSON.stringify(audioInfo), {
+      const url = new URL(req.url);
+      const task_id = url.searchParams.get('id');
+
+      if (task_id == null) {
+        return new NextResponse(JSON.stringify({ error: 'Missing parameter id' }), {
+          status: 400,
+          headers: {
+            'Content-Type': 'application/json',
+            ...corsHeaders
+          }
+        });
+      }
+
+      const task = await aceDataSunoApi.get_task(task_id);
+
+      return new NextResponse(JSON.stringify(task), {
         status: 200,
         headers: {
           'Content-Type': 'application/json',
@@ -24,7 +31,7 @@ export async function POST(req: NextRequest) {
         }
       });
     } catch (error: any) {
-      return new NextResponse(JSON.stringify({ error: error.message }), {
+      return new NextResponse(JSON.stringify({ error: 'Internal server error: ' + error.message }), {
         status: 500,
         headers: {
           'Content-Type': 'application/json',
@@ -35,13 +42,14 @@ export async function POST(req: NextRequest) {
   } else {
     return new NextResponse('Method Not Allowed', {
       headers: {
-        Allow: 'POST',
+        Allow: 'GET',
         ...corsHeaders
       },
       status: 405
     });
   }
 }
+
 
 export async function OPTIONS(request: Request) {
   return new Response(null, {
